# cnlp_transformers

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  CnlpRobertaForClassification.py  DAPT.md  EarlyLayerRobertaForSequenceClassification.py  LICENSE  MANIFEST.in  Makefile  README.md  build_doc_source.sh  build_docs.sh  cnlp_data.py  cnlp_processors.py  dataset.schema.json  dev-requirements.txt  macos-requirements.txt  metadata.schema.json  options_per_model.md  pyproject.toml  requirements.txt  run_layerwise_classifier.py  setup.cfg  thyme_eval.py  train_system.py
.github/workflows/: build-and-test.yml  lint-and-format.yml  python-package-macos.yml  python-package-ubuntu.yml  python-package-windows.yml
api/: event_rest.py  negation_rest.py  start_negation_rest.sh  start_temporal_rest.sh  temporal_rest.py  timex_rest.py
docker/: Dockerfile.cpu  Dockerfile.dev.cpu  Dockerfile.dev.gpu  Dockerfile.gpu  MAINTAINER.md  build.py  compose.yaml  model_download.py
docs/: .gitignore  Makefile  cnlpt.BaselineModels.rst  cnlpt.CnlpModelForClassification.rst  cnlpt.HierarchicalTransformer.rst  cnlpt.api.cnlp_rest.rst  cnlpt.api.dtr_rest.rst  cnlpt.api.event_rest.rst  cnlpt.api.hier_rest.rst  cnlpt.api.negation_rest.rst  cnlpt.api.rst  cnlpt.api.temporal_rest.rst  cnlpt.api.timex_rest.rst  cnlpt.cnlp_args.rst  cnlpt.cnlp_data.rst  cnlpt.cnlp_metrics.rst  cnlpt.cnlp_predict.rst  cnlpt.cnlp_processors.rst  cnlpt.data.preprocess_i2b2_2008.rst  cnlpt.data.rst  cnlpt.data.transform_prot.rst  cnlpt.data.transform_uci_drug.rst  cnlpt.rst  cnlpt.thyme_eval.rst  cnlpt.train_system.rst  conf.py  index.rst  make.bat  requirements.txt  transformer_objects.inv  transformer_objects.txt
docs/source/: conf.py  transformer_objects.txt
examples/: .gitignore
examples/chemprot/: README.md  chemprot_requirements.txt  preprocess_chemprot.py  transform_prot.py
examples/i2b2_2008/: preprocess_i2b2_2008.py
examples/notebooks/: viz_negation.ipynb  viz_params.ipynb
examples/temporal_extraction/: README.md  extract_temporal.py
examples/uci_drug/: README.md  prepare_data.py  transform_uci_drug.py  uci_drug.ipynb
new_tests/data/: test_cnlp_dataset.py  test_data_reader.py
scripts/: build_html_docs.sh  prepare_release.py  test_multiple_systems.sh
src/cnlpt/: #cnlp_processors.py#  BaselineModels.py  CnlpModelForClassification.py  CnlpRobertaForClassification.py  HierarchicalTransformer.py  PIPELINE_README.md  PIPELINE_README.md~  __init__.py  __main__.py  cnlp_args.py  cnlp_data.py  cnlp_error_analysis.py  cnlp_metrics.py  cnlp_pipeline.py  cnlp_pipeline_utils.py  cnlp_predict.py  cnlp_processors.py  cnlp_seqgen.py  dapt.py  get_tlink.py  notes.org  select_hyperparameters.py  thyme_eval.py  train_system.py  transform_uci_drug.py
src/cnlpt/_cli/: main.py  rest.py  train.py
src/cnlpt/api/: __init__.py  annotate_rest.py  cnlp_rest.py  cnn_rest.py  concept_norm_rest.py  current_rest.py  dtr_rest.py  event_rest.py  hier_rest.py  negation_rest.py  temporal_rest.py  termexists_rest.py  timex_rest.py  tlink_rest.py  utils.py
src/cnlpt/args/: __init__.py  dapt_args.py  data_args.py  log.py  model_args.py  parse_args.py  training_args.py
src/cnlpt/data/: __init__.py  analysis.py  cnlp_dataset.py  data_reader.py  features.py  predictions.py  preprocess.py  preprocess_i2b2_2008.py  task_info.py  tasks.py  transform_prot.py  transform_uci_drug.py  transform_uci_drug_rating.py  transform_uci_druglib.py  utils.py
src/cnlpt/data/cnlp_datasets/: auto_processor.py  cnlp_dataset.py  dapt_dataset.py
src/cnlpt/data/scispacy_chemprot/: dev.tsv  train.tsv
src/cnlpt/legacy/: CnlpModelForClassification.py  HierarchicalTransformer.py  cnlp_args.py  cnlp_data.py  cnlp_predict.py  dapt.py  thyme_eval.py  train_system.py
src/cnlpt/legacy/data/: tasks.py  transform_uci_druglib.py
src/cnlpt/legacy/data/cnlp_datasets/: __init__.py  cnlp_dataset.py  dapt_dataset.py
src/cnlpt/modeling/: __init__.py  load.py  modules.py  types.py  utils.py
src/cnlpt/modeling/config/: __init__.py  base_config.py  cnn_config.py  hierarchical_config.py  lstm_config.py  projection_config.py
src/cnlpt/modeling/models/: __init__.py  cnn_model.py  hierarchical_model.py  lstm_model.py  projection_model.py
src/cnlpt/models/: __init__.py  cnlp.py  hierarchical.py
src/cnlpt/models/baseline/: __init__.py  cnn.py  lstm.py
src/cnlpt/new_data/: __init__.py  cnlp_dataset.py  data_reader.py  logging.py  preprocess.py  task_info.py
src/cnlpt/new_train_system/: args.py  cnlp_train_system.py  display.py  log.py  logging.py  metrics.py  parse_args.py  training_callbacks.py  utils.py
src/cnlpt/notebooks/: viz_negation.ipynb  viz_params.ipynb
src/cnlpt/pipelines/: __init__.py  classification.py  classification.py~  tagging.py
src/cnlpt/rest/: __init__.py  cnlp_rest.py  visualizer.html
src/cnlpt/tests/: test_multiple_systems.sh
src/cnlpt/train_system/: __init__.py  args.py  cnlp_train_system.py  display.py  log.py  metrics.py  parse_args.py  training_callbacks.py  utils.py
test/: conftest.py  test_api.py  test_init.py
test/api/: test_api.py  test_attributions.py
test/common/: fixtures.py
test/common/datasets/json/: test.json
test/data/: test_analysis.py  test_cnlp_dataset.py  test_data_reader.py
test/train_system/: test_init_train_system.py  test_predict.py
