[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cnlp-transformers"
dynamic = ["version"]
authors = [
    { name = "Machine Learning for Medical Language Lab @ CHIP", email = "Timothy.Miller@childrens.harvard.edu" },
]
description = "Transformers for Clinical NLP"

readme = "README.md"
requires-python = ">=3.9, <3.12"
dependencies = [
    "anaforatools~=1.1.0",
    "datasets~=2.21.0",
    "fastapi~=0.115.2",
    "httpx>=0.27.2",
    "huggingface-hub>=0.9.0",
    "nltk~=3.5",
    "numpy~=2.0.2",
    "pandas~=2.2.3",
    "pydantic~=1.10.8",
    "requests~=2.32.2",
    "scikit-learn~=1.5.2",
    "seqeval~=1.2.2",
    "torch",
    "transformers[torch]~=4.45",
    "uvicorn[standard]~=0.32.0",
]

classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
]

[project.urls]
Homepage = "https://github.com/Machine-Learning-for-Medical-Language/cnlp_transformers/"
"Bug Tracker" = "https://github.com/Machine-Learning-for-Medical-Language/cnlp_transformers/issues"

[tool.setuptools.dynamic]
version = { attr = "cnlpt.__version__" }

[project.optional-dependencies]
lint = [
    "ruff==0.7.0", # same as in pre-commit hooks
]
build = ["build", "pip>=21.3", "twine"]
test = ["pytest"]
docs = ["sphinx", "sphinx-autodoc-typehints", "sphinx-rtd-theme", "sphobjinv"]
dev = ["cnlp-transformers[build,docs,lint,test]", "pre-commit"]

[project.scripts]
"cnlpt_current_rest" = "cnlpt.api.current_rest:rest"
"cnlpt_dtr_rest" = "cnlpt.api.dtr_rest:rest"
"cnlpt_event_rest" = "cnlpt.api.event_rest:rest"
"cnlpt_negation_rest" = "cnlpt.api.negation_rest:rest"
"cnlpt_temporal_rest" = "cnlpt.api.temporal_rest:rest"
"cnlpt_termexists_rest" = "cnlpt.api.termexists_rest:rest"
"cnlpt_timex_rest" = "cnlpt.api.timex_rest:rest"
"cnlpt_hier_rest" = "cnlpt.api.hier_rest:rest"
"cnlpt_cnn_rest" = "cnlpt.api.cnn_rest:rest"

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = [
    # ruff defaults
    "E4",
    "E7",
    "E9",
    "F",
    # additional options
    "I",   # isort
    "UP",  # pyupgrade
    "G",   # logging
    "FA",  # future annotations
    "PIE", # misc
]

ignore = [
    "G004", # f-strings in logging statements
]

[tool.ruff.lint.pyupgrade]
# Preserve Union types, despite alternate 'X | Y' syntax being available via __future__ annotations module.
# This is necessary because fastAPI and pydantic parse type annotations at runtime, and since the new syntax is
# a python 3.10 feature they don't expect it in python 3.9.
# This can be removed if/when we stop supporting python 3.9.
keep-runtime-typing = true

[tool.uv]
dev-dependencies = ["cnlp-transformers[dev]"]

[tool.uv.sources]
cnlp-transformers = { workspace = true }
