[metadata]
name = cnlp-transformers
version = file: src/cnlpt/VERSION
author = Machine Learning for Medical Language Lab @ CHIP
author_email = Timothy.Miller@childrens.harvard.edu
description = Transformers for Clinical NLP
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Machine-Learning-for-Medical-Language/cnlp_transformers
project_urls =
    Bug Tracker = https://github.com/Machine-Learning-for-Medical-Language/cnlp_transformers/issues
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7, <3.11
install_requires =
    anaforatools~=1.1.0
    datasets~=2.4.0
    fastapi~=0.88.0
    filelock~=3.4.0
    huggingface-hub~=0.9.0
    nltk~=3.5
    numpy ~=1.21.5; python_version<'3.8'
    numpy ~=1.23.3; python_version>='3.8'
    pandas~=1.3.5
    pydantic~=1.8.2
    PyRuSH~=1.0.3.6
    requests~=2.26.0
    scikit-learn~=1.0.2
    seqeval~=1.2.2
    torch~=1.5
    transformers~=4.15
    uvicorn[standard]~=0.16.0
    warned-dataclasses~=0.4.0

[options.entry_points]
console_scripts =
    cnlpt_dtr_rest = cnlpt.api.dtr_rest:rest
    cnlpt_event_rest = cnlpt.api.event_rest:rest
    cnlpt_negation_rest = cnlpt.api.negation_rest:rest
    cnlpt_temporal_rest = cnlpt.api.temporal_rest:rest
    cnlpt_timex_rest = cnlpt.api.timex_rest:rest

[options.packages.find]
where = src
