[metadata]
name = cnlp-transformers
version = attr: cnlpt.__version__
author = Machine Learning for Medical Language Lab @ CHIP
author_email = Timothy.Miller@childrens.harvard.edu
description = Transformers for Clinical NLP
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Machine-Learning-for-Medical-Language/cnlp_transformers
project_urls =
    Bug Tracker = https://github.com/Machine-Learning-for-Medical-Language/cnlp_transformers/issues
classifiers =
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9, <3.12
install_requires =
    anaforatools~=1.1.0
    datasets~=2.21.0
    fastapi~=0.115.2
    huggingface-hub>=0.9.0
    nltk~=3.5
    numpy~=2.0.2
    pandas~=2.2.3
    pydantic~=1.10.8
    #PyRuSH~=1.0.3.6
    requests~=2.32.2
    scikit-learn~=1.5.2
    seqeval~=1.2.2
    torch
    transformers[torch]~=4.45
    uvicorn[standard]~=0.32.0

[options.entry_points]
console_scripts =
    cnlpt_current_rest = cnlpt.api.current_rest:rest
    cnlpt_dtr_rest = cnlpt.api.dtr_rest:rest
    cnlpt_event_rest = cnlpt.api.event_rest:rest
    cnlpt_negation_rest = cnlpt.api.negation_rest:rest
    cnlpt_temporal_rest = cnlpt.api.temporal_rest:rest
    cnlpt_termexists_rest = cnlpt.api.termexists_rest:rest
    cnlpt_timex_rest = cnlpt.api.timex_rest:rest
    cnlpt_hier_rest = cnlpt.api.hier_rest:rest
    cnlpt_cnn_rest = cnlpt.api.cnn_rest:rest

[options.packages.find]
where = src
